--- a/kohya_ss/known_working.json
+++ b/kohya_ss/known_working.json
@@ -29,17 +29,17 @@
   "gradient_accumulation_steps": 1.0,
   "gradient_checkpointing": false,
   "keep_tokens": "0",
-  "learning_rate": 0.0001,
+  "learning_rate": 1.0,
   "logging_dir": "",
   "lora_network_weights": "",
-  "lr_scheduler": "constant_with_warmup",
+  "lr_scheduler": "constant",
   "lr_scheduler_num_cycles": "",
   "lr_scheduler_power": "",
-  "lr_warmup": 5,
+  "lr_warmup": 0,
   "max_data_loader_n_workers": "0",
   "max_resolution": "512,512",
   "max_timestep": 1000,
-  "max_token_length": "75",
+  "max_token_length": "225",
   "max_train_epochs": "",
   "mem_eff_attn": false,
   "mid_lr_weight": "",
@@ -57,8 +57,8 @@
   "noise_offset": 0,
   "noise_offset_type": "Original",
   "num_cpu_threads_per_process": 2,
-  "optimizer": "AdamW",
-  "optimizer_args": "",
+  "optimizer": "Prodigy",
+  "optimizer_args": "decouple=True weight_decay=0.01 d_coef=2 use_bias_correction=True safeguard_warmup=True",
   "output_dir": "",
   "output_name": "",
   "persistent_data_loader_workers": false,
@@ -85,14 +85,14 @@
   "sdxl_cache_text_encoder_outputs": false,
   "sdxl_no_half_vae": true,
   "seed": "",
-  "shuffle_caption": true,
+  "shuffle_caption": false,
   "stop_text_encoder_training": 0,
-  "text_encoder_lr": 5e-05,
+  "text_encoder_lr": 1.0,
   "train_batch_size": 1,
   "train_data_dir": "",
   "train_on_input": false,
   "training_comment": "",
-  "unet_lr": 0.0001,
+  "unet_lr": 1.0,
   "unit": 1,
   "up_lr_weight": "",
   "use_cp": false,
