--- a/kohya_ss/known_working_lora.json
+++ b/kohya_ss/known_working_lora.json
@@ -15,9 +15,9 @@
   "clip_skip": "1",
   "color_aug": false,
   "conv_alpha": 1,
-  "conv_alphas": "",
+  "conv_block_alphas": "",
+  "conv_block_dims": "",
   "conv_dim": 1,
-  "conv_dims": "",
   "decompose_both": false,
   "dim_from_weights": false,
   "down_lr_weight": "",
@@ -25,8 +25,9 @@
   "epoch": 100,
   "factor": -1,
   "flip_aug": false,
+  "full_bf16": false,
   "full_fp16": false,
-  "gradient_accumulation_steps": 1.0,
+  "gradient_accumulation_steps": 1,
   "gradient_checkpointing": false,
   "keep_tokens": "0",
   "learning_rate": 1.0,
@@ -36,6 +37,7 @@
   "lr_scheduler_num_cycles": "",
   "lr_scheduler_power": "",
   "lr_warmup": 0,
+  "max_bucket_reso": 2048,
   "max_data_loader_n_workers": "0",
   "max_resolution": "512,512",
   "max_timestep": 1000,
@@ -43,6 +45,7 @@
   "max_train_epochs": "",
   "mem_eff_attn": false,
   "mid_lr_weight": "",
+  "min_bucket_reso": 256,
   "min_snr_gamma": 0,
   "min_timestep": 0,
   "mixed_precision": "fp16",
@@ -70,7 +73,7 @@
   "resume": "",
   "sample_every_n_epochs": 1,
   "sample_every_n_steps": 0,
-  "sample_prompts": "",
+  "sample_prompts": "masterpiece, best quality, 1girl, in white shirts, upper body, looking at viewer, simple background --n low quality, worst quality, bad anatomy,bad composition, poor, low effort --w 768 --h 768 --d 1 --l 7.5 --s 28",
   "sample_sampler": "dpmsolver++",
   "save_every_n_epochs": 1,
   "save_every_n_steps": 0,
@@ -102,5 +105,5 @@
   "vae_batch_size": 0,
   "wandb_api_key": "",
   "weighted_captions": false,
-  "xformers": false
+  "xformers": "none"
 }
