--- a/kohya_ss/known_working_lora.json
+++ b/kohya_ss/known_working_lora.json
@@ -73,7 +73,7 @@
   "resume": "",
   "sample_every_n_epochs": 1,
   "sample_every_n_steps": 0,
-  "sample_prompts": "masterpiece, best quality, 1girl, in white shirts, upper body, looking at viewer, simple background --n low quality, worst quality, bad anatomy, bad composition, poor, low effort --w 512 --h 512 --d 1 --l 7.5 --s 28",
+  "sample_prompts": "a photo of a woman, looking at viewer, simple background --n low quality, worst quality, bad anatomy, bad composition, poor, low effort --w 512 --h 512 --d 1 --l 7.5 --s 28",
   "sample_sampler": "dpmsolver++",
   "save_every_n_epochs": 1,
   "save_every_n_steps": 0,
